<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="derived_app_name">Hide All</string>
  <string name="user_privacy_policy">Terms of Service</string>
  <string name="user_privacy_policy_accept">Agree</string>
  <string name="user_privacy_policy_decline">Cancel</string>
  <string name="PRIVACY_POLICY_DLG_USER_AGREEMENT">Terms of service</string>
  <string name="PRIVACY_POLICY_DLG_PRIVACY_POLICY">Privacy Policy</string>
  <string name="prompt_popup_title">Warm tips</string>
  <string name="prompt_popup_description">Dear, you can think about it again。</string>
  <string name="prompt_popup_confirm">Check it again</string>
  <string name="prompt_popup_cancel">Exit</string>
  <string name="PRIVACY_POLICY_DLG_FIRST_CONTENT_WITH_LINK">Before using Hide All, please read and understand the "%2$s" and "%1$s" carefully. By clicking agree, you indicate that you have read and agreed to all the terms.</string>
  <string name="mihe_main_setting">Settings</string>
  <string name="mihe_main_hide_app">Hide apps</string>
  <string name="mihe_set_default_launcher_tile">Set Home Screen</string>
  <string name="mihe_set_default_launcher_desc">To let Easy Launcer work,please enable the Second Home Screen</string>
  <string name="mihe_set_default_launcher_desc_1">To let Hide apps work,please enable the Second Home Screen</string>
  <string name="mihe_set_default_launcher_comfirm">Enable</string>
  <string name="mihe_set_default_launcher_cancel">Cancel</string>
  <string name="mihe_choose_app">Choose apps to hide</string>
  <string name="mihe_search_hint">Search for apps to hide</string>
  <string name="mihe_most_used_app">Apps recommended</string>
  <string name="mihe_show_get_installed_app_tip">When adding an app, you need to obtain installed app information. Please find the [Get app list] permission in permission management and enable it</string>
  <string name="mihe_incompatibility_open_now">Turn on now</string>
  <string name="ad_id">ca-app-pub-2982899253625646~2512403024</string>
  <string name="mihe_back_to_old_launcher_title">Warning</string>
  <string name="mihe_back_to_old_launcher_desc">Restoring to the original home screen will reveal hidden apps. Do you want to continue?</string>
  <string name="mihe_back_to_old_launcher_comfirm">Restore</string>
  <string name="mihe_back_to_old_launcher_cancel">Cancel</string>
  <string name="mihe_unselect_app">Please select at least one app</string>
  <string name="mihe_restore_home_screen">Restore Home Screen</string>
  <string name="mihe_long_press_to_unhide">Long press to unhide app</string>
  <string name="mihe_unhide_app_yet">You haven\'t hidden any apps yet</string>
  <string name="mihe_tap_hide_app">tap the button to hide app</string>
  <string name="mihe_hide_state_disable">Hiding has failed\nplease enable the %1$s</string>
  <string name="mihe_hide_state_comfirm">Confirm</string>
  <string name="mihe_hide_state_cancel">Cancel</string>
  <string name="mihe_select_app">Select \"Hide All\"</string>
  <string name="mihe_select_app_content">as home screen to hide apps</string>
  <string name="mihe_hide_app_button">Hide app</string>
  <string name="mihe_unhide_app_button">Unhide app</string>
  <string name="mihe_unhide_app_successful">Unhide successful</string>
  <string name="mihe_launcher_popup_guide">You can view the hidden apps in \"Hide All\"</string>
  <string name="mihe_hide_app_success_tip_txt">Successfully\nNotifications are displayed normally</string>
  <string name="mihe_feedback_score_please_rate_our_app">Please rate our app</string>
  <string name="mihe_update_go_to_market">App Store</string>
  <string name="mihe_collect_problem_title">Feedback</string>
  <string name="mihe_feedback_collect_problem_reason">The reason you are dissatisfied is？</string>
  <string name="mihe_feedback_more_suggestions">More suggestions</string>
  <string name="mihe_feedback_collect_more_problem_reason_tip">We are so sorry for your bad experience, welcome your comments to help us improve the app.</string>
  <string-array name="mihe_feedback_default_reason">
    <item>Unable to hide</item>
    <item>unable to multi-open</item>
    <item>app crashes</item>
    <item>the added app crashes when opened</item>
    <item>too many ads</item>
    <item>VIP price</item>
    <item>added apps run slowly</item>
  </string-array>
  <string name="mihe_collect_problem_thank_you_for_your_feedback">Thank you for your feedback</string>
  <string name="mihe_network_error">The network is error, please try again later.</string>
  <string name="mihe_collect_problem_please_select_reason">Please select a reason or give suggestions</string>
  <string name="mihe_continue">Continue</string>
</resources>
