<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/app_theme_color"
  android:orientation="vertical">

  <v.navigationbar.VNavigationBar
    android:id="@+id/vnNavigationbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:leftIcon="@drawable/common_navigation_back"
    app:title="@string/mihe_collect_problem_title" />

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <LinearLayout
      android:id="@+id/ns_content"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
          android:layout_width="7dp"
          android:layout_height="7dp"
          android:layout_alignBaseline="@+id/tv_text"
          android:background="@drawable/mihe_feedback_score_dot" />

        <v.VText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_toRightOf="@+id/v_dot"
          android:text="@string/mihe_feedback_collect_problem_reason"
          android:textColor="@color/white"
          android:textSize="17dp" />
      </LinearLayout>

      <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="19dp"
        android:layout_marginRight="32dp"
        app:chipSpacingHorizontal="8dp"
        app:chipSpacingVertical="12.5dp">


      </com.google.android.material.chip.ChipGroup>


      <LinearLayout
        android:id="@+id/ll_more_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
          android:layout_width="7dp"
          android:layout_height="7dp"
          android:layout_alignBaseline="@+id/tv_text"
          android:background="@drawable/mihe_feedback_score_dot" />

        <v.VText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_toRightOf="@+id/v_dot"
          android:text="@string/mihe_feedback_more_suggestions"
          android:textColor="@color/white"
          android:textSize="17dp" />
      </LinearLayout>

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12.5dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <View

          android:layout_width="match_parent"
          android:layout_height="169dp"
          android:background="@drawable/mihe_feedback_more_problem_bg" />

        <EditText
          android:id="@+id/et_input"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginLeft="17dp"
          android:layout_marginTop="24dp"
          android:layout_marginRight="17dp"
          android:background="@null"
          android:gravity="left"
          android:hint="@string/mihe_feedback_collect_more_problem_reason_tip"
          android:paddingBottom="32dp"
          android:scrollbars="vertical"
          android:textColor="#FFFFFF"
          android:textColorHint="#5D6160"
          android:textSize="14dp" />

        <v.VText
          android:id="@+id/tv_text_count"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_alignParentBottom="true"
          android:layout_marginRight="19dp"
          android:layout_marginBottom="32dp"
          android:alpha="0.6"
          android:text="800"
          android:textColor="#AAAAAA" />

      </RelativeLayout>


    </LinearLayout>

  </androidx.core.widget.NestedScrollView>


  <v.VButton
    android:id="@+id/btn_next"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="50dp"
    android:background="@drawable/mihe_shape_color_3ec0aa_32"
    android:gravity="center"
    android:text="@string/mihe_continue"
    android:textColor="#000000"
    android:textSize="16sp" />

</LinearLayout>
